Fixed map-section spacing

--- a/css/map.css
+++ b/css/map.css
@@ -28,6 +28,7 @@
 .map-info {
 	margin-top: 18rem;
 	vertical-align: middle;
+	padding: 0;
 }
 
 .map-info h1 {
