--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,19 +58,19 @@
 
 }
 
-@media (max-width: 1171px) {
-
-	.map-info h1 {
-		font-size: 26pt !important;
-	}
-
-}
-
-@media (max-width: 1143px) {
+/*@media (max-width: 1171px) {
 
 	.map-info h1 {
 		font-size: 28pt !important;
 	}
+
+}*/
+
+@media (max-width: 1143px) {
+
+	/*.map-info h1 {
+		font-size: 26pt !important;
+	}*/
 
 }
 
@@ -86,6 +86,13 @@
 
 }
 
+@media (max-width: 1131px) {
+
+	.map-info {
+		margin-left: 5rem !important;
+	}
+}
+
 @media (max-width: 1041px) {
 
 	.colon h1 {
@@ -98,14 +105,6 @@
 
 }
 
-@media (max-width: 999px) {
-
-	.map-info h1 {
-		font-size: 24pt !important;
-	}
-
-}
-
 @media (max-width: 991px) {
 
 	.jomo-logo {
@@ -114,12 +113,20 @@
 	}
 
 	.time-logo-section {
-		margin-top: 0rem !important;
+		margin-top: 1rem !important;
 		margin-right: 0rem !important;
 		margin-bottom: 2rem;
 		padding-left: 0rem !important;
 		padding-right: 0rem !important;
 		text-align: center;
+	}
+
+	.form-group {
+		width: 65%;
+	}
+
+	.timelogo img {
+		width: 60%;
 	}
 
 	.time-logo-section h3 {
@@ -175,6 +182,9 @@
 	.map-info {
 		margin-bottom: 2rem !important;
 		margin-top: 2rem !important;
+		margin-left: 0rem !important;
+		padding-left: 1rem !important;
+		padding-right: 1rem !important;
 		text-align: center;
 	}
 
@@ -210,6 +220,10 @@
 	/*.time-logo-section h3 {
 		font-size: 14pt;
 	}*/
+
+	.timelogo img {
+		width: 75% !important;
+	}
 
 	.donating {
 		margin-right: 0rem !important;
